* docutils/parsers/rst/__init__.py:

  - Added validator to tab_width setting, with test.  Closes SF bug
    #1212515, report from Wu Wei.

* docutils/parsers/rst/states.py:

  - Fixed bug with escaped colons indicating a literal block.

* docutils/parsers/rst/directives/misc.py:

  - Added the "default-role" and "title" directives.
  - Added standard data file syntax to the "include" directive.

* docutils/parsers/rst/include/: Directory added to project; contains
  standard data files for the "include" directive.  Initial contents:
  character entity substitution definition sets.

* docs/user/links.txt: Added to project; link list.

* docs/ref/rst/substitutions.txt: "reStructuredText Standard
  Substitution Definition Sets", added to project.

* test/coverage.sh: Added to project; test coverage script.

* tools/dev/profile_docutils.py: Added to project; profiler script.


Release 0.3.9 (2005-05-26)
==========================

* General:

  - Eliminated and replaced all uses of the old string attributes
    ``id``, ``name``, ``dupname`` and ``class`` with references to the
    new list attributes ``ids``, ``names``, ``dupnames`` and
    ``classes`` throughout the whole source tree.

* docutils/core.py:

  - Enabled ``--dump-*`` options when ``--traceback`` specified,
    allowing for easier debugging.

* docutils/examples.py:

  - Added ``internals`` function for exploration.

* docutils/io.py:

  - Fixed ``Input.decode`` method to apply heuristics only if no
    encoding is explicitly given, and to provide better reporting of
    decoding errors.
  - The ``Input.decode`` method now removes byte order marks (BOMs)
    from input streams.

* docutils/nodes.py:

  - ``image`` element class changed to subclass of Element, not
    TextElement (it's an empty element, and cannot contain text).
  - Added ``attr_defaults`` dictionary for default attribute values.
  - Added empty list as default value for the following attributes: